# Omnidocs

./: .gitignore  404.html  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-math.txt  requirements-ocr.txt  requirements-old.txt  requirements-paddle.txt  requirements-ppstructure.txt  requirements-table.txt  requirements-working.txt  requirements.txt  sitemap.xml  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-release.yml  deploy-mkdocs.yml  docs.yml  lint.yml  release.yml
0.2.5/: 404.html  index.html  objects.inv  sitemap.xml
0.2.5/LICENSE/: index.html
0.2.5/ROADMAP/: index.html
0.2.5/concepts/: index.html
0.2.5/contributing/: index.html
0.2.5/getting-started/: index.html
0.2.5/guides/: index.html
0.2.5/models/: index.html
0.2.5/reference/: index.html
0.2.5/search/: search_index.json
0.2.6/: 404.html  index.html  objects.inv  sitemap.xml
0.2.6/LICENSE/: index.html
0.2.6/ROADMAP/: index.html
0.2.6/ROADMAP_DETAILED/: index.html
0.2.6/concepts/: index.html
0.2.6/contributing/: index.html
0.2.6/getting-started/: index.html
0.2.6/guides/: index.html
0.2.6/installation/: index.html
0.2.6/models/: index.html
0.2.6/reference/: index.html
0.2.6/search/: search_index.json
0.2.6/tasks/: index.html
0.2.6/usage/: index.html
0.2.7/: 404.html  index.html  objects.inv  sitemap.xml
0.2.7/LICENSE/: index.html
0.2.7/ROADMAP/: index.html
0.2.7/ROADMAP_DETAILED/: index.html
0.2.7/concepts/: index.html
0.2.7/contributing/: index.html
0.2.7/getting-started/: index.html
0.2.7/guides/: index.html
0.2.7/installation/: index.html
0.2.7/models/: index.html
0.2.7/reference/: index.html
0.2.7/search/: search_index.json
0.2.7/tasks/: index.html
0.2.7/usage/: index.html
0.2.8/: 404.html  index.html  objects.inv  sitemap.xml
0.2.8/LICENSE/: index.html
0.2.8/ROADMAP/: index.html
0.2.8/ROADMAP_DETAILED/: index.html
0.2.8/concepts/: index.html
0.2.8/contributing/: index.html
0.2.8/getting-started/: index.html
0.2.8/guides/: index.html
0.2.8/installation/: index.html
0.2.8/models/: index.html
0.2.8/reference/: index.html
0.2.8/search/: search_index.json
0.2.8/tasks/: index.html
0.2.8/usage/: index.html
0.2.9/: 404.html  index.html  objects.inv  sitemap.xml
0.2.9/LICENSE/: index.html
0.2.9/ROADMAP/: index.html
0.2.9/ROADMAP_DETAILED/: index.html
0.2.9/concepts/: index.html
0.2.9/contributing/: index.html
0.2.9/getting-started/: index.html
0.2.9/guides/: index.html
0.2.9/installation/: index.html
0.2.9/models/: index.html
0.2.9/reference/: index.html
0.2.9/search/: search_index.json
0.2.9/tasks/: index.html
0.2.9/usage/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
ROADMAP/: index.html
api_reference/: core.html  index.html  overview.html  python_api.html
api_reference/tasks/: layout_analysis.html  math_expression.html  ocr.html  table_extraction.html  text_extraction.html
architecture/: index.html
benchmarks/: .gitignore  README.md  base.py  index.html  registry.py
benchmarks/multilingual/: __init__.py  __main__.py  dataset.py  evaluator.py  runner.py
benchmarks/olmocrbench/: __init__.py  __main__.py  dataset.py  main.py  runner.py  scorer.py
benchmarks/omnidocbench/: __init__.py  __main__.py  dataset.py  evaluator.py  main.py  runner.py
benchmarks/omnidocbench_eval/: run_eval.py
developer-guide/: index.html
docs/: LAYOUT_EXTRACTOR_PLAN.md  MODEL_REGISTRY.md  ROADMAP.md  ROADMAP_DETAILED.md  STANDARDIZATION_SUMMARY.md  concepts.md  getting-started.md  index.md  installation.md
docs/api_reference/: python_api.md  utils.md
docs/benchmarks/: benchmarking.md
docs/contributing/: adding-models.md  index.md  testing.md
docs/getting_started/: installation.md  ocr_test.ipynb  quickstart.md
docs/guides/: batch-processing.md  cache-management.md  deployment-modal.md  index.md  model-cache.md
docs/models/: comparison.md  index.md
docs/tasks/: batch-processing.md  deployment.md  index.md  layout-analysis.md  ocr.md  reading-order.md  table-extraction.md  text-extraction.md
docs/tutorials/: layout_extraction.md
docs/usage/: batch-processing.md  deployment.md  index.md
examples/: cache_management_demo.py  progress_bar_example.py
getting_started/: getting_started.html  installation.html  ocr_test.html  quickstart.html  table_test.html
omnidocs/: __init__.py  _version.py  batch.py  cache.py  document.py
omnidocs/configs/: unimernet.yaml
omnidocs/core/: __init__.py  model_loader.py  model_registry.py  models_catalog.py
omnidocs/tasks/: __init__.py
omnidocs/utils/: __init__.py  aggregation.py  cache.py
omnidocs/vlm/: __init__.py  client.py  config.py
omnidocs/workflows/: surya_pdf_to_md.py
scripts/: gen_ref_pages.py
scripts/table_extraction/: mlx_lighton_text.py  modal_lighton_pytorch.py
scripts/text_extraction/: mlx_lighton_text.py  modal_lighton_pytorch.py  modal_lighton_vllm.py
search/: search_index.json
tasks/layout_analysis/: overview.html
tasks/math_extraction/: math_latex_extraction.html  overview.html
tasks/ocr/: overview.html
tests/: test_batch.py  test_cache.py  test_cache_dir.py  test_document.py  test_version.py
workflows/: overview.html
(+965 files in other folders)
