[project]
name = "omnidocs"
version = "0.1.0"
description = "A unified Python toolkit for document processing models"
authors = [{name = "adithya-s-kolavi", email = "adithyaskolavi@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
